tests/ui/parser/issues/issue-21153.stderr
error: expected one of `!` or `::`, found `=`
  --> $DIR/issue-21153.rs:2:10
   |
LL | trait MyTrait<T>: Iterator {
   |                            - while parsing this item list starting here
LL |     Item = T;
   |          ^ expected one of `!` or `::`
LL |
LL | }
   | - the item list ends here

error: aborting due to 1 previous error

