tests/ui/parser/issues/issue-21153.rs
trait MyTrait<T>: Iterator {
    Item = T;
    //~^ ERROR expected one of `!` or `::`, found `=`
}

fn main() {}
